# Sudokura

./: CMakeLists.txt  Makefile  README.md  sudokura_sdl.c
.github/workflows/: release.yml
src/: main.c
src/core/: game.c  game.h
src/platform/: fonts.c  fonts.h
src/ui/: render.c  render.h
tests/: test_game.c
